fix alignment for text in hero

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -156,7 +156,7 @@ nav {
 }
 
 .animation {
-  height: 58px;
+  height: 57px;
   overflow: hidden;
 }
 
